<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">Favorite</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="my_cart">My Cart</string>
    <string name="username_gamail_com">username@gamail.com</string>
    <string name="user_name">User Name</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your Food!</string>
    <string name="hello_user">Hello User</string>
    <string name="min_45">Min - $45</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_foodyapp">Welcome To FooDyApp</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="registered">Registered</string>
    <string name="welcome_back_to_foodyapp">Welcome back To FoodyAPP</string>
    <string name="welcome_back_to_fooDyapp">Welcome back to FooDyApp</string>
    <string name="email_adress">Email Adress</string>
    <string name="sign_in">Sign In</string>
    <string name="dinner">Dinner</string>
    <string name="description_description_description">Description Description Description</string>
    <string name="discount">Discount</string>
    <string name="_120_0">120.0</string>
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="your_favorite_and_testy_food_is_here">Your Favorite And testy food is here!</string>
    <string name="view_more">View more</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_order">Make Order</string>
    <string name="_180">$180</string>
    <string name="total">Total</string>



</resources>