<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.myapplication.ui.dailymeal.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.myapplication.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_fragment" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.myapplication.ui.my_cart_fragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart_fragment" />
</navigation>