<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dinnerimg"
        android:foreground="@drawable/backgroundimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/dinnertext"
        app:layout_constraintVertical_bias="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:fontFamily="@font/amarante"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
            android:id="@+id/textview10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_description_description"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/amita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dinnertext"
            />
    <TextView
        android:id="@+id/discounttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount"
        android:fontFamily="@font/amita"
        android:textColor="@color/pink_500"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview10"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageview"

        />

</androidx.constraintlayout.widget.ConstraintLayout>