<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.FavoriteFragment">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

   <ImageView
       android:id="@+id/imageView2"
       android:layout_width="match_parent"
       android:layout_height="230dp"
       android:foreground="@drawable/backgroundimg"
       android:scaleType="centerCrop"
       android:src="@drawable/favorite2"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dp"
       android:fontFamily="@font/amarante"
       android:text="@string/_10_weekend_delicious_ndinner_recipes"
       android:textColor="@color/white"
       android:textSize="25sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="@+id/imageView2"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/imageView2"
       app:layout_constraintVertical_bias="0.7" />

   <TextView
       android:id="@+id/textview2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:padding="8dp"
       android:text="@string/view_more"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:layout_margin="8dp"
       app:layout_constraintBottom_toBottomOf="@id/imageView2"
       app:layout_constraintEnd_toEndOf="parent" />

   <TextView
       android:layout_margin="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/amita"
       android:text="@string/your_favorite_and_testy_food_is_here"
       android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="@+id/imageView2"
       app:layout_constraintTop_toBottomOf="@+id/textView1"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginLeft="10dp"/>

   <com.google.android.material.tabs.TabLayout
       android:id="@+id/tab_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView2" />

     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager2"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

 </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>