<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationPage">

    <ImageView
        android:id="@+id/registerimage1"
        android:foreground="@drawable/backgroundimg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/registerimg"
        android:scaleType="centerCrop"
        android:contentDescription="TODO"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal"
                android:text="My FooDy App"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.151" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview4" />


            <EditText
                android:id="@+id/edittext1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#CCCCCC"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="13dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="Name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edittext2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview5"
                app:layout_constraintWidth_percent=".8"
                app:layout_editor_absoluteY="265dp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/edittext2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#CCCCCC"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="13dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/edittext1"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="@+id/edittext1"
                app:layout_constraintTop_toBottomOf="@id/edittext1"
                app:layout_constraintWidth_percent=".8"
                app:layout_editor_absoluteY="265dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#CCCCCC"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="13dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/conformpassword"
                app:layout_constraintEnd_toEndOf="@+id/edittext2"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="@+id/edittext2"
                app:layout_constraintTop_toBottomOf="@+id/edittext2"
                app:layout_constraintWidth_percent=".8"
                app:layout_editor_absoluteY="265dp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/conformpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#CCCCCC"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="13dp"
                android:hint="Conform Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/btnregister"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintWidth_percent=".8"
                app:layout_editor_absoluteY="265dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_background"
                android:padding="14dp"
                android:text="@string/registered"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/conformpassword"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/conformpassword"
                app:layout_constraintTop_toBottomOf="@+id/conformpassword"
                app:layout_constraintWidth_percent=".8" />

            <TextView
                android:id="@+id/textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Already created"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnregister"
                app:layout_constraintHorizontal_bias="0.425"
                app:layout_constraintStart_toStartOf="@+id/btnregister"
                app:layout_constraintTop_toBottomOf="@+id/btnregister"
                app:layout_constraintVertical_bias="0.494" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="login"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/pink_500"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnregister"
                app:layout_constraintHorizontal_bias="0.212"
                app:layout_constraintStart_toEndOf="@+id/textview6"
                app:layout_constraintTop_toBottomOf="@id/btnregister"
                app:layout_constraintVertical_bias="0.469"
                tools:ignore="OnClick" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>